--- a/examples/demo1/demo1-scenario.yaml
+++ b/examples/demo1/demo1-scenario.yaml
@@ -63,7 +63,7 @@ deployment:
                                             id: cloud1-svc
                                             name: cloud1-svc
                                             type: CLOUD-APP
-                                            image: demo1-server
+                                            image: demo-server
                                             environment: 'MGM_GROUP_NAME=svc-cloud, MGM_APP_ID=cloud1-svc, MGM_APP_PORT=80, MEEP_POD_NAME=cloud1-svc'
                                             serviceConfig:
                                                 name: cloud1-svc
@@ -169,7 +169,7 @@ deployment:
                                             id: zone1-edge1-svc
                                             name: zone1-edge1-svc
                                             type: EDGE-APP
-                                            image: demo1-server
+                                            image: demo-server
                                             environment: 'MGM_GROUP_NAME=svc, MGM_APP_ID=zone1-edge1-svc, MGM_APP_PORT=80, MEEP_POD_NAME=zone1-edge1-svcNOT'
                                             serviceConfig:
                                                 name: zone1-edge1-svc
@@ -222,7 +222,7 @@ deployment:
                                             id: zone1-fog1-svc
                                             name: zone1-fog1-svc
                                             type: EDGE-APP
-                                            image: demo1-server
+                                            image: demo-server
                                             environment: 'MGM_GROUP_NAME=svc, MGM_APP_ID=zone1-fog1-svc, MGM_APP_PORT=80'
                                             serviceConfig:
                                                 name: zone1-fog1-svc
@@ -367,7 +367,7 @@ deployment:
                                             id: zone2-edge1-svc
                                             name: zone2-edge1-svc
                                             type: EDGE-APP
-                                            image: demo1-server
+                                            image: demo-server
                                             environment: 'MGM_GROUP_NAME=svc, MGM_APP_ID=zone2-edge1-svc, MGM_APP_PORT=80, MEEP_POD_NAME=zone2-edge1-svc'
                                             serviceConfig:
                                                 name: zone2-edge1-svc
