--- a/charts/meep-virt-engine/virt-templates/values-template.yaml
+++ b/charts/meep-virt-engine/virt-templates/values-template.yaml
@@ -113,7 +113,7 @@ external:
 
 serviceaccount:
   create: {{.ServiceaccountCreate}}
-  user: admin-user
+  user: meep-user
 
 rbac:
   create: {{.RbacCreate}}
