kibana 6.4.3 chart and pv + dashboard and setting download

--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -78,6 +78,9 @@ repo:
     couchdb:
       chart: charts/couchdb
       pv: charts/couchdb/meep-pv-couchdb.yaml
+    kibana:
+      chart: charts/kibana
+      pv: charts/kibana/meep-pv-kibana.yaml
     redis:
       version: 4.0.1
       values: charts/redis/redis-values.yaml
