--- a/charts/elasticsearch/elastic-values.yaml
+++ b/charts/elasticsearch/elastic-values.yaml
@@ -7,6 +7,10 @@ search.max_bucket: 1000
 initImage:
   pullPolicy: IfNotPresent
 
+image:
+  tag: 6.4.3
+  pullPolicy: IfNotPresent
+
 data:
   persistence:
     storageClass: meep-pv-es-data
