--- a/charts/kibana/templates/kibana-pv.yaml
+++ b/charts/kibana/templates/kibana-pv.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.persistentVolume.enabled}}
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
@@ -12,11 +13,11 @@ metadata:
   name: meep-pv-kibana
 spec:
   capacity:
-    storage: 10Gi
+    storage: 5Gi
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
   hostPath:
-    path: "<WORKDIR>/kibana"
+    path: "{{.Values.persistentVolume.location}}"
   storageClassName: meep-pv-kibana
-
+{{- end }}
