--- a/charts/kibana/values.yaml
+++ b/charts/kibana/values.yaml
@@ -174,6 +174,10 @@ persistentVolumeClaim:
   # storageClass: "-"
   storageClass: "meep-pv-kibana"
 
+persistentVolume:
+  enabled: true
+  location: "" 
+
 # default security context
 securityContext:
   enabled: false
