--- a/examples/demo1/demo1-scenario.yaml
+++ b/examples/demo1/demo1-scenario.yaml
@@ -3,6 +3,7 @@ deployment:
     interDomainLatency: 50
     interDomainLatencyVariation: 5
     interDomainThroughput: 1000
+    interDomainPacketLoss: 0
     domains:
         -
             id: PUBLIC
@@ -59,25 +60,30 @@ deployment:
                                             environment: null
                                             externalConfig: null
                                             status: null
+                                            userChartLocation: null
+                                            userChartAlternateValues: null
+                                            userChartGroup: null
                                         -
                                             id: cloud1-svc
                                             name: cloud1-svc
                                             type: CLOUD-APP
+                                            isExternal: false
+                                            userChartLocation: null
+                                            userChartAlternateValues: null
+                                            userChartGroup: null
                                             image: demo-server
-                                            environment: 'MGM_GROUP_NAME=svc-cloud, MGM_APP_ID=cloud1-svc, MGM_APP_PORT=80, MEEP_POD_NAME=cloud1-svc'
+                                            environment: 'MGM_GROUP_NAME=cloud1-svc, MGM_APP_ID=cloud1-svc, MGM_APP_PORT=80'
+                                            commandArguments: ""
+                                            commandExe: ""
                                             serviceConfig:
                                                 name: cloud1-svc
+                                                meSvcName: ""
                                                 ports:
                                                     -
                                                         protocol: TCP
                                                         port: 80
                                                         externalPort: null
-                                                meSvcName: null
-                                            isExternal: null
-                                            commandArguments: null
-                                            commandExe: null
                                             externalConfig: null
-                                            status: null
                                     isExternal: null
                                     networkLocationsInRange: null
                     interFogPacketLoss: null
@@ -91,6 +97,7 @@ deployment:
             interZoneLatency: 15
             interZoneLatencyVariation: 3
             interZoneThroughput: 1000
+            interZonePacketLoss: 0
             zones:
                 -
                     id: operator1-COMMON
@@ -125,12 +132,15 @@ deployment:
                     interFogLatency: 10
                     interFogLatencyVariation: 2
                     interFogThroughput: 1000
+                    interFogPacketLoss: 0
                     interEdgeLatency: 12
                     interEdgeLatencyVariation: 2
                     interEdgeThroughput: 1000
+                    interEdgePacketLoss: 0
                     edgeFogLatency: 5
                     edgeFogLatencyVariation: 1
                     edgeFogThroughput: 1000
+                    edgeFogPacketLoss: 0
                     networkLocations:
                         -
                             id: zone1-DEFAULT
@@ -165,12 +175,15 @@ deployment:
                                             environment: null
                                             externalConfig: null
                                             status: null
+                                            userChartLocation: null
+                                            userChartAlternateValues: null
+                                            userChartGroup: null
                                         -
                                             id: zone1-edge1-svc
                                             name: zone1-edge1-svc
                                             type: EDGE-APP
                                             image: demo-server
-                                            environment: 'MGM_GROUP_NAME=svc, MGM_APP_ID=zone1-edge1-svc, MGM_APP_PORT=80, MEEP_POD_NAME=zone1-edge1-svcNOT'
+                                            environment: 'MGM_GROUP_NAME=svc, MGM_APP_ID=zone1-edge1-svc, MGM_APP_PORT=80'
                                             serviceConfig:
                                                 name: zone1-edge1-svc
                                                 meSvcName: svc
@@ -184,6 +197,9 @@ deployment:
                                             commandExe: null
                                             externalConfig: null
                                             status: null
+                                            userChartLocation: null
+                                            userChartAlternateValues: null
+                                            userChartGroup: null
                                     isExternal: null
                                     networkLocationsInRange: null
                         -
@@ -193,6 +209,7 @@ deployment:
                             terminalLinkLatency: 1
                             terminalLinkLatencyVariation: 1
                             terminalLinkThroughput: 1000
+                            terminalLinkPacketLoss: 0
                             physicalLocations:
                                 -
                                     id: zone1-fog1
@@ -218,6 +235,9 @@ deployment:
                                             environment: null
                                             externalConfig: null
                                             status: null
+                                            userChartLocation: null
+                                            userChartAlternateValues: null
+                                            userChartGroup: null
                                         -
                                             id: zone1-fog1-svc
                                             name: zone1-fog1-svc
@@ -237,6 +257,9 @@ deployment:
                                             commandExe: null
                                             externalConfig: null
                                             status: null
+                                            userChartLocation: null
+                                            userChartAlternateValues: null
+                                            userChartGroup: null
                                     isExternal: null
                                     networkLocationsInRange: null
                                 -
@@ -256,6 +279,9 @@ deployment:
                                             serviceConfig: null
                                             externalConfig: null
                                             status: null
+                                            userChartLocation: null
+                                            userChartAlternateValues: null
+                                            userChartGroup: null
                                     isExternal: null
                                     networkLocationsInRange: null
                                 -
@@ -269,41 +295,41 @@ deployment:
                                             name: ue2-svc
                                             type: UE-APP
                                             isExternal: true
-                                            externalConfig:
-                                                ingressServiceMap:
-                                                    -
-                                                        name: svc
-                                                        port: 80
-                                                        externalPort: 31111
-                                                        protocol: TCP
-                                                        ip: null
-                                                    -
-                                                        name: iperf
-                                                        port: 80
-                                                        externalPort: 31222
-                                                        protocol: UDP
-                                                        ip: null
-                                                    -
-                                                        name: cloud1-svc
-                                                        port: 80
-                                                        externalPort: 31112
-                                                        protocol: TCP
-                                                        ip: null
-                                                    -
-                                                        name: cloud1-iperf
-                                                        port: 80
-                                                        externalPort: 31223
-                                                        protocol: UDP
-                                                        ip: null
-                                                egressServiceMap: null
+                                            userChartLocation: null
+                                            userChartAlternateValues: null
+                                            userChartGroup: null
                                             image: null
                                             environment: null
                                             commandArguments: null
                                             commandExe: null
                                             serviceConfig: null
-                                            status: null
+                                            externalConfig:
+                                                ingressServiceMap:
+                                                    -
+                                                        externalPort: 31111
+                                                        name: svc
+                                                        port: 80
+                                                        protocol: TCP
+                                                        ip: null
+                                                    -
+                                                        externalPort: 31222
+                                                        name: iperf
+                                                        port: 80
+                                                        protocol: UDP
+                                                        ip: null
+                                                    -
+                                                        externalPort: 31112
+                                                        name: cloud1-svc
+                                                        port: 80
+                                                        protocol: TCP
+                                                        ip: null
+                                                    -
+                                                        externalPort: 31223
+                                                        name: cloud1-iperf
+                                                        port: 80
+                                                        protocol: UDP
+                                                        ip: null
                                     networkLocationsInRange: null
-                            terminalLinkPacketLoss: null
                         -
                             id: zone1-poa2
                             name: zone1-poa2
@@ -311,11 +337,8 @@ deployment:
                             terminalLinkLatency: 10
                             terminalLinkLatencyVariation: 2
                             terminalLinkThroughput: 50
-                            terminalLinkPacketLoss: null
+                            terminalLinkPacketLoss: 0
                             physicalLocations: null
-                    interFogPacketLoss: null
-                    interEdgePacketLoss: null
-                    edgeFogPacketLoss: null
                 -
                     id: zone2
                     name: zone2
@@ -323,12 +346,15 @@ deployment:
                     interFogLatency: 10
                     interFogLatencyVariation: 2
                     interFogThroughput: 1000
+                    interFogPacketLoss: 0
                     interEdgeLatency: 12
                     interEdgeLatencyVariation: 2
                     interEdgeThroughput: 1000
+                    interEdgePacketLoss: 0
                     edgeFogLatency: 5
                     edgeFogLatencyVariation: 1
                     edgeFogThroughput: 1000
+                    edgeFogPacketLoss: 0
                     networkLocations:
                         -
                             id: zone2-DEFAULT
@@ -363,12 +389,15 @@ deployment:
                                             environment: null
                                             externalConfig: null
                                             status: null
+                                            userChartLocation: null
+                                            userChartAlternateValues: null
+                                            userChartGroup: null
                                         -
                                             id: zone2-edge1-svc
                                             name: zone2-edge1-svc
                                             type: EDGE-APP
                                             image: demo-server
-                                            environment: 'MGM_GROUP_NAME=svc, MGM_APP_ID=zone2-edge1-svc, MGM_APP_PORT=80, MEEP_POD_NAME=zone2-edge1-svc'
+                                            environment: 'MGM_GROUP_NAME=svc, MGM_APP_ID=zone2-edge1-svc, MGM_APP_PORT=80'
                                             serviceConfig:
                                                 name: zone2-edge1-svc
                                                 meSvcName: svc
@@ -382,6 +411,9 @@ deployment:
                                             commandExe: null
                                             externalConfig: null
                                             status: null
+                                            userChartLocation: null
+                                            userChartAlternateValues: null
+                                            userChartGroup: null
                                     isExternal: null
                                     networkLocationsInRange: null
                         -
@@ -391,11 +423,5 @@ deployment:
                             terminalLinkLatency: 1
                             terminalLinkLatencyVariation: 1
                             terminalLinkThroughput: 20
-                            terminalLinkPacketLoss: null
+                            terminalLinkPacketLoss: 0
                             physicalLocations: null
-                    interFogPacketLoss: null
-                    interEdgePacketLoss: null
-                    edgeFogPacketLoss: null
-            interZonePacketLoss: null
-    interDomainPacketLoss: null
-config: null
