--- a/examples/demo2/charts/iperf/templates/service.yaml
+++ b/examples/demo2/charts/iperf/templates/service.yaml
@@ -1,15 +1,18 @@
 kind: Service
 apiVersion: v1
 metadata:
+  {{- if (eq "" .Values.service.name) }}
+  name: {{ template "meep.fullname" . }}
+  {{- else }}
   name: {{ .Values.service.name }}
+  {{- end }}
   namespace: default
 spec:
   type: ClusterIP
   selector:
-    app: "meep-demo-iperf"
+    app: {{ template "meep.name" . }}
+    release: {{ .Release.Name }}
   ports:
-  - name: port-80
-    port: 80
-    targetPort: 80
-    protocol: UDP
-
+  - port: {{ .Values.service.port }}
+    targetPort: {{ .Values.service.port }}
+    protocol: {{ .Values.service.protocol }}
