--- a/examples/demo2/values/z1-f1-svc-values.yaml
+++ b/examples/demo2/values/z1-f1-svc-values.yaml
@@ -2,6 +2,5 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-deployment:
-  env:
-    id: "zone1-fog1-svc"
+service:
+  name: "zone1-fog1-svc"
