--- a/js-apps/meep-frontend/package.json
+++ b/js-apps/meep-frontend/package.json
@@ -8,9 +8,7 @@
     "test:verbose": "jest --verbose true",
     "test:coverage": "jest --verbose true --coverage --colors",
     "build": "webpack",
-    "build:dev": "webpack-serve --port 8091 --host 10.3.16.136",
-    "cy:run": "cypress run --spec 'cypress/integration/tests/*' --config video=false",
-    "cy:open": "cypress open"
+    "build:dev": "webpack-serve --port 8091 --host 10.3.16.136"
   },
   "author": "",
   "license": "ISC",
@@ -22,7 +20,6 @@
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^0.28.11",
-    "cypress": "^3.1.5",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.10.0",
     "enzyme-to-json": "^3.3.5",
