added affinity to core pods
minor fixes

--- a/charts/couchdb/templates/statefulset.yaml
+++ b/charts/couchdb/templates/statefulset.yaml
@@ -104,6 +104,13 @@ spec:
       nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 8 }}
 {{- end }}
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: node-role.kubernetes.io/master
+                operator: Exists
       volumes:
         - name: config-storage
           emptyDir: {}
