--- a/charts/meep-tc-engine/templates/deployment.yaml
+++ b/charts/meep-tc-engine/templates/deployment.yaml
@@ -46,3 +46,10 @@ spec:
           - name: codecov-storage
             mountPath: /codecov
           {{- end}}
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: node-role.kubernetes.io/master
+                operator: Exists
