expose redis externally

--- a/charts/redis/values.yaml
+++ b/charts/redis/values.yaml
@@ -17,6 +17,8 @@ master:
   disableCommands: ""
   persistence:
     enabled: false
+  service:
+    type: NodePort
+    nodePort: 30379
 
 meepOrigin: core
-
