added private docker registry
minor fix

--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -64,6 +64,8 @@ repo:
       codecov: true
       lint: true
   dep:
+    docker-registry:
+      chart: charts/docker-registry
     elastic:
       es:
         chart: incubator/elasticsearch
