--- a/charts/meep-tc-engine/values.yaml
+++ b/charts/meep-tc-engine/values.yaml
@@ -13,7 +13,7 @@ deployment:
 image:
   repository: meep-tc-engine
   tag: latest
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 service:
   type: NodePort
