--- a/charts/meep-mg-manager/values.yaml
+++ b/charts/meep-mg-manager/values.yaml
@@ -13,7 +13,7 @@ deployment:
 image:
   repository: meep-mg-manager
   tag: latest
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 service:
   type: NodePort
