--- a/examples/demo1/demo1-scenario.yaml
+++ b/examples/demo1/demo1-scenario.yaml
@@ -71,7 +71,7 @@ deployment:
                                             userChartLocation: null
                                             userChartAlternateValues: null
                                             userChartGroup: null
-                                            image: demo-server
+                                            image: meep-docker-registry:30001/demo-server
                                             environment: 'MGM_GROUP_NAME=cloud1-svc, MGM_APP_ID=cloud1-svc, MGM_APP_PORT=80'
                                             commandArguments: ""
                                             commandExe: ""
@@ -182,7 +182,7 @@ deployment:
                                             id: zone1-edge1-svc
                                             name: zone1-edge1-svc
                                             type: EDGE-APP
-                                            image: demo-server
+                                            image: meep-docker-registry:30001/demo-server
                                             environment: 'MGM_GROUP_NAME=svc, MGM_APP_ID=zone1-edge1-svc, MGM_APP_PORT=80'
                                             serviceConfig:
                                                 name: zone1-edge1-svc
@@ -242,7 +242,7 @@ deployment:
                                             id: zone1-fog1-svc
                                             name: zone1-fog1-svc
                                             type: EDGE-APP
-                                            image: demo-server
+                                            image: meep-docker-registry:30001/demo-server
                                             environment: 'MGM_GROUP_NAME=svc, MGM_APP_ID=zone1-fog1-svc, MGM_APP_PORT=80'
                                             serviceConfig:
                                                 name: zone1-fog1-svc
@@ -396,7 +396,7 @@ deployment:
                                             id: zone2-edge1-svc
                                             name: zone2-edge1-svc
                                             type: EDGE-APP
-                                            image: demo-server
+                                            image: meep-docker-registry:30001/demo-server
                                             environment: 'MGM_GROUP_NAME=svc, MGM_APP_ID=zone2-edge1-svc, MGM_APP_PORT=80'
                                             serviceConfig:
                                                 name: zone2-edge1-svc
