--- a/examples/demo2/demo2-scenario.yaml
+++ b/examples/demo2/demo2-scenario.yaml
@@ -66,7 +66,7 @@ deployment:
                                             id: cloud1-svc
                                             name: cloud1-svc
                                             type: CLOUD-APP
-                                            image: demo-server
+                                            image: meep-docker-registry:30001/demo-server
                                             environment: 'MGM_GROUP_NAME=cloud1-svc,MGM_APP_ID=cloud1-svc,MGM_APP_PORT=80'
                                             serviceConfig:
                                                 name: cloud1-svc
