--- a/js-apps/meep-frontend/package.json
+++ b/js-apps/meep-frontend/package.json
@@ -8,7 +8,7 @@
     "test:verbose": "jest --verbose true",
     "test:coverage": "jest --verbose true --coverage --colors",
     "build": "webpack",
-    "build:dev": "webpack-serve --port 8091 --host 10.3.16.136"
+    "build:dev": "webpack-serve --port 8091 --host 10.3.16.73"
   },
   "author": "",
   "license": "ISC",
@@ -42,12 +42,16 @@
     "@material-ui/icons": "^1.1.1",
     "axios": "^0.18.0",
     "classnames": "2.2.6",
+    "d3": "^5.9.2",
+    "d3-force": "^2.0.1",
+    "d3-hierarchy": "^1.1.8",
     "jquery": "3.3.1",
     "lodash": "^4.17.11",
     "material-components-web": "0.38.1",
     "material-design-icons": "3.0.1",
     "prop-types": "15.6.2",
     "react": "16.4.1",
+    "react-d3-graph": "^2.0.2",
     "react-dom": "16.4.1",
     "react-iframe": "^1.5.0",
     "react-redux": "^5.1.1",
