added elasticsearch chart + fixed affinity for meep pods
removed publish command from meepctl

--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -68,9 +68,7 @@ repo:
       chart: charts/docker-registry
     elastic:
       es:
-        chart: incubator/elasticsearch
-        version: "1.9.1"
-        values: charts/elasticsearch/elastic-values.yaml
+        chart: charts/elasticsearch
         pv: charts/elasticsearch/meep-pv-es.yaml
       es-curator:
         chart: charts/elasticsearch-curator
