--- a/charts/couchdb/templates/statefulset.yaml
+++ b/charts/couchdb/templates/statefulset.yaml
@@ -104,13 +104,10 @@ spec:
       nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 8 }}
 {{- end }}
+      {{- if .Values.affinity }}
       affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-            - matchExpressions:
-              - key: node-role.kubernetes.io/master
-                operator: Exists
+{{ toYaml .Values.affinity | indent 8 }}
+      {{- end }}
       volumes:
         - name: config-storage
           emptyDir: {}
