--- a/charts/meep-mg-manager/templates/deployment.yaml
+++ b/charts/meep-mg-manager/templates/deployment.yaml
@@ -46,10 +46,8 @@ spec:
           - name: codecov-storage
             mountPath: /codecov
           {{- end}}
+      {{- if .Values.affinity }}
       affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-            - matchExpressions:
-              - key: node-role.kubernetes.io/master
-                operator: Exists
+{{ toYaml .Values.affinity | indent 8 }}
+      {{- end }}
+
