--- a/charts/docker-registry/values.yaml
+++ b/charts/docker-registry/values.yaml
@@ -53,10 +53,20 @@ resources: {}
   #  cpu: 100m
   #  memory: 128Mi
 persistence:
+  enabled: true
   accessMode: 'ReadWriteOnce'
-  enabled: false
+  reclaimPolicy: Retain
   size: 10Gi
-  # storageClass: '-'
+  location: "<WORKDIR>/docker-registry"
+  ## If defined, storageClassName: <storageClass>
+  ## If set to "-", storageClassName: "", which disables dynamic provisioning
+  ## If set to "fullname", storageClassName: <template fullname>
+  ## If undefined (the default) or set to null, no storageClassName spec is
+  ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
+  ##   GKE, AWS & OpenStack)
+  ##
+  # storageClass: "-"
+  storageClass: "fullname"
 
 # set the type of filesystem to use: filesystem, s3
 storage: filesystem
@@ -101,6 +111,8 @@ configData:
   storage:
     cache:
       blobdescriptor: inmemory
+    filesystem:
+      rootdirectory: /var/lib/registry
   http:
     addr: :5000
     headers:
@@ -121,3 +133,11 @@ priorityClassName: ""
 nodeSelector: {}
 
 tolerations: []
+
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: node-role.kubernetes.io/master
+          operator: Exists
