--- a/charts/meep-virt-engine/virt-templates/values-template.yaml
+++ b/charts/meep-virt-engine/virt-templates/values-template.yaml
@@ -42,10 +42,20 @@ deployment:
       {{.}}
     {{- end}}
 
-  resources: {}
+  resources:
+    requests: {}
+    limits:
+    {{- if .Deployment.GpuEnabled}}
+    {{- if eq .Deployment.GpuType "nvidia" }}
+      nvidia.com/gpu: {{.Deployment.GpuCount}}
+    {{- end}}
+    {{- end}}
+
   nodeSelector: {}
   tolerations: []
   affinity: {}
+
+
 
 service:
   enabled: {{.Service.Enabled}}
