--- a/charts/meep-virt-engine/virt-templates/values-template.yaml
+++ b/charts/meep-virt-engine/virt-templates/values-template.yaml
@@ -46,7 +46,7 @@ deployment:
     requests: {}
     limits:
     {{- if .Deployment.GpuEnabled}}
-    {{- if eq .Deployment.GpuType "nvidia" }}
+    {{- if eq .Deployment.GpuType "NVIDIA" }}
       nvidia.com/gpu: {{.Deployment.GpuCount}}
     {{- end}}
     {{- end}}
