--- a/charts/kibana/templates/deployment.yaml
+++ b/charts/kibana/templates/deployment.yaml
@@ -172,6 +172,7 @@ spec:
 {{- with .Values.extraContainers }}
 {{ tpl . $ | indent 6 }}
 {{- end }}
+      terminationGracePeriodSeconds: 5
     {{- if .Values.image.pullSecrets }}
       imagePullSecrets:
 {{ toYaml .Values.image.pullSecrets | indent 8 }}
