--- a/charts/meep-loc-serv/templates/deployment.yaml
+++ b/charts/meep-loc-serv/templates/deployment.yaml
@@ -46,4 +46,4 @@ spec:
           - name: codecov-storage
             mountPath: /codecov
           {{- end}}
-              
+      terminationGracePeriodSeconds: 5
