--- a/charts/meep-virt-engine/virt-templates/values-template.yaml
+++ b/charts/meep-virt-engine/virt-templates/values-template.yaml
@@ -35,6 +35,8 @@ deployment:
         - {{.}}
       {{- end}}
 
+  terminationGracePeriodSeconds: 5
+
   template:
     namespace: default
     labels:
