--- a/go-apps/meep-tc-sidecar/Dockerfile
+++ b/go-apps/meep-tc-sidecar/Dockerfile
@@ -8,4 +8,4 @@
 FROM debian:9.6-slim
 RUN apt-get update && apt-get install -y iputils-ping iproute2 iptables conntrack
 COPY ./meep-tc-sidecar /meep-tc-sidecar
-ENTRYPOINT /meep-tc-sidecar
+ENTRYPOINT ["/meep-tc-sidecar"]
