--- a/charts/couchdb/templates/statefulset.yaml
+++ b/charts/couchdb/templates/statefulset.yaml
@@ -100,6 +100,7 @@ spec:
                   name: {{ template "couchdb.fullname" . }}
                   key: adminPassword
 {{- end }}
+      terminationGracePeriodSeconds: 5
 {{- if .Values.nodeSelector }}
       nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 8 }}
