--- a/charts/meep-ctrl-engine/templates/deployment.yaml
+++ b/charts/meep-ctrl-engine/templates/deployment.yaml
@@ -46,6 +46,7 @@ spec:
           - name: codecov-storage
             mountPath: /codecov
           {{- end}}
+      terminationGracePeriodSeconds: 5
       {{- if .Values.affinity }}
       affinity:
 {{ toYaml .Values.affinity | indent 8 }}
