--- a/charts/meep-virt-engine/virt-templates/defaultDir/templates/deployment.yaml
+++ b/charts/meep-virt-engine/virt-templates/defaultDir/templates/deployment.yaml
@@ -49,6 +49,7 @@ spec:
         {{- end}}
           resources:
 {{toYaml .resources | indent 12}}
+      terminationGracePeriodSeconds: {{.terminationGracePeriodSeconds}}
       {{- end}}
       {{- end}}
 
