location service notification swagger updates + loc serv & metrics engine chart fix

--- a/charts/meep-loc-serv/values.yaml
+++ b/charts/meep-loc-serv/values.yaml
@@ -13,7 +13,7 @@ deployment:
 image:
   repository: meep-loc-serv
   tag: latest
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 service:
   type: NodePort
